# dejavu

./: .gitignore  .prettierrc.json  README.md  eslint.config.js  manifest.json  package.json  pyproject.toml  pyrightconfig.json  scroll.html  svg-similarity-ranker.js  vendor-hashes.json
.github/workflows/: ci.yml  release.yml
CSXS/: manifest.xml
client/: icons  index.html
client/css/: advanced.css  bottom.css  def_colors.css  def_effects.css  def_font.css  def_measures.css  def_time.css  def_variables.css  install.css  interval.css  locations.css  open.css  recovery.css  similarity.css  style.css  table.css  timeline.css  token-field.css  top.css  update-install.css
client/js/: advanced.js  bottom.js  core.js  host-contract.js  inkscape-install.js  interval.js  locations.js  main.js  main_es6.js  open.js  recovery.js  settings-store.js  similar.js  sticky-scrollbar.js  svg-icon.js  table.js  theme.js  timeline.js  top.js  update-check.js  update-install.js  vendor-autoinstall.js
client/lib/: token-field.js  token-input.js
host/: host.js  host.jsx  host.legacy.jsx
icons/app-logo/: dejavu-manifest.jsonl
icons/icon-reset/: dejavu-manifest.jsonl
jsx/: svg_similarity_bridge.jsx
scripts/: build.sh  compare.js  release.py  server.py  snapshot.js
similarity/: MANIFEST_SNIPPET.xml  config.json  manifest.cep.xml
similarity/css/: similar-files.css
similarity/lib/: CSInterface.js
svg_similarity_extended/: README.md  manifest.json
tests/: core.test.js  host-api-surface.test.js  host-contract.test.js  settings-store.test.js  similarity-converters.test.js
(+320 files in other folders)
