[project]
name = "illustrator-bridge"
version = "0.1.48"
description = "Versioned Python state bridge for querying and manipulating Adobe Illustrator objects."
requires-python = ">=3.13"
dependencies = [
  
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
exclude = [".history", ".dev"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]

[tool.basedpyright]
exclude = [".history", ".dev"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

