[project]
name = "illustrator-bridge"
version = "0.1.48"
description = "Versioned Python state bridge for querying and manipulating Adobe Illustrator objects."
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
exclude = [".history", ".dev","**/stubs/**"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]

[tool.basedpyright]
exclude = [".history", ".dev"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
stubPath = "./stubs"

[tool.pyright]
stubPath = "./stubs"
pythonVersion = "3.13"
typeCheckingMode = "strict"
extraPaths = [
  "/opt/anaconda3/lib/python3.13/site-packages",
]